apps/jellyfin/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    app: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
        name: jellyfin
    spec:
      nodeSelector:
        kubernetes.io/hostname: "rk1-4"
      containers:
      - name: jellyfin
        image: jellyfin/jellyfin:10.11.9
        imagePullPolicy: Always
        securityContext:
          privileged: true
          runAsGroup: 0
          runAsUser: 0
        volumeMounts:
        - name: media
          mountPath: "/media"
        - name: config
          mountPath: "/config"
        - name: cache
          mountPath: "/cache"
        - name: dev
          mountPath: /dev
      volumes:
      - name: media
        persistentVolumeClaim:
          claimName: media-nfs
      - name: config
        persistentVolumeClaim:
          claimName: config-v2
      - name: cache
        persistentVolumeClaim:
          claimName: cache-v2
      - name: dev
        hostPath:
          path: /dev
