apps/jellyfin/Service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin
  labels:
    bgp-pool: "pool-1"
    advertise: "bgp"
spec:
  selector:
    app: jellyfin
  externalTrafficPolicy: Local
  type: LoadBalancer
  ports:
    - port: 8096
      targetPort: 8096
      name: jellyfin
